# Shaurmania

./: .coveragerc  .env.example  .gitignore  About.html  Email.html  Idea.md  LICENSE  Login.html  Product.html  README.md  address.html  base.html  cart.html  catalog.html  db — копия.sqlite3  feedback.html  index.html  licenses.html  manage.py  mkdocs.yml  pyproject.toml  pytest.ini  registration.html  requirements.txt  sales.html  user.html
Shaurmania/: asgi.py  settings.py  urls.py  wsgi.py
api/: urls.py  views.py
assets/fontawesome/: version.txt
bot/: bot  bot.py  settings.py
cart/: admin.py  models.py  tests.py  urls.py  views.py
cart/fixtures/: promocodes.json
cart/migrations/: 0001_initial.py  0002_cart_created_at_cart_meta_cart_session_key_and_more.py  0002_checkout_order_archive.py  0003_merge_20260327_1112.py
css/lib/: buttons.css  colors.css  text.css
css/src/: About.css  Licenses.css  Product.css  Search.css  address.css  catalog.css  feedback.css  global.css  index.css  user.css
docs/: architecture.md  index.md  installation.md  structure.md
docs/development/: code-style.md  debugging.md  getting-started.md  index.md  models.md  optimization.md  testing.md  views.md
docs/reference/: commands.md  cookbook.md  env-reference.md  index.md  urls.md
ext_database/: IPLOCATE-LICENSE.txt
geodata/: utils.py
geodata/admin/: __init__.py  address.py  geo.py  (+1 more)
lists/: stop_words.txt
main/: admin.py  context_processors.py  documents.py  factories.py  forms.py  models.py  urls.py  validators.py  views.py
security/: signals.py  utils.py
(+295 files in other folders)
